[gd_scene load_steps=5 format=3 uid="uid://j40rrwfmh0fd"]

[ext_resource type="Script" uid="uid://10vd03snwvg6" path="res://scripts/Player3D.gd" id="1_0hdqx"]
[ext_resource type="PackedScene" uid="uid://bepo2od7obxch" path="res://assets/3d/Pacman/scene.gltf" id="2_pacman"]

[sub_resource type="SphereShape3D" id="SphereShape3D_1"]

[sub_resource type="Environment" id="Environment_d2pg4"]
ambient_light_color = Color(0.972549, 0.796078, 0.298039, 1)
glow_enabled = true
glow_intensity = 2.02
glow_hdr_threshold = 0.05

[node name="Player3D" type="CharacterBody3D"]
script = ExtResource("1_0hdqx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 2.98936, 0.252442, 0, -0.252442, 2.98936, 2.86107, 0.474195, 0)
shape = SubResource("SphereShape3D_1")

[node name="PacmanModel" type="Node3D" parent="."]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)

[node name="pacman" parent="PacmanModel" instance=ExtResource("2_pacman")]
transform = Transform3D(-0.07, 0, 1.05697e-08, 0, 0.07, 0, -1.05697e-08, 0, -0.07, 13.743, -4.7414, 0)

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.866, 0.5, 0, -0.5, 0.866, 0, 1.5, 4)

[node name="Muzzle" type="Marker3D" parent="CameraPivot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Crosshair" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -11.5
offset_right = 4.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -40.0
offset_right = 220.0
offset_bottom = -20.0
grow_vertical = 0
value = 100.0

[node name="AmmoLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
grow_horizontal = 0
text = "Ammo: 0"
horizontal_alignment = 2

[node name="ChargeBar" type="ProgressBar" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 60.0
offset_right = -20.0
offset_bottom = 80.0
grow_horizontal = 0
value = 0.0
max_value = 100.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_d2pg4")
